--- a/style/reset.css
+++ b/style/reset.css
@@ -59,11 +59,21 @@ button {
 
 /* 직접 추가 */
 
-.txt-hide {
+/* .txt-hide {
     position: absolute;
     clip: rect(0 0 0 0);
     width: 1px;
     height: 1px;
     margin: -1px;
     overflow: hidden;
+} */
+
+.ir{
+    display: block;
+    overflow: hidden;
+    position:absolute;
+    text-indent: -9999px;
+    line-height:0;
+    font-size: 1px;
+    color:transparent;
 }
