--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
-/* font-size 값이 나누어 떨어지지 않아서 rem 단위 사용하지 않음. */
-* {
-    font-family: 'Noto Sans KR';
+.img-item {
+    display: block;
 }
 
+/* font-size 값이 나누어 떨어지지 않아서 rem 단위 사용하지 않음. */
 body {
     background-color: #eae8fe;
 }
@@ -18,6 +18,7 @@ body {
     align-items: flex-start;
     gap: 0 28px;
     padding-top: 248px;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 #app .vending-machine, #app .info-mine {
@@ -58,26 +59,26 @@ body {
 }
 
 .vending-machine .list-item .click-on::before {
-    /* display: block; */
+    display: block;
     position: absolute;
     content: '';
     width: 100%;
     height: 100%;
-    /* top: 0; */
-    /* left: 0; */
+    top: 0;
+    left: 0;
     border: 3px solid #6327fe;
     border-radius: 10px;
     box-sizing: border-box;
 }
 
 .vending-machine .list-item .sold-out::before {
-    /* display: block; */
+    display: block;
     position: absolute;
     content: '';
     width: 100%;
     height: 100%;
-    /* top: 0; */
-    /* left: 0; */
+    top: 0;
+    left: 0;
     z-index: 1;
     border-radius: 10px;
     background: no-repeat center / 58px 45px url(../images/Sold-out.png) rgba(0, 0, 0, 0.8);
@@ -108,49 +109,167 @@ body {
 .vending-machine .txt-price{
     font-size: 12px;
     padding: 2px 12px;
-    background-color: #6327FE;
+    background-color: #6327fe;
     border-radius: 50px;
     color: #fff;
 }
 
-
-
-.balance-return {
-
+.vending-machine .balance-return, .vending-machine .money-put, .vending-machine .item-get {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12px;
 }
 
-.info-balance {
-
+.vending-machine .info-balance, .vending-machine .inp-put, .vending-machine .list-item-staged {
+    width: 65%;
+    padding: 6px 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
 }
 
-.txt-balance {
-
+.btn-return, .btn-put, .btn-get {
+    width: 30%;
+    font-size: 13px;
+    border-radius: 5px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 }
 
-.btn-return {
-
+.vending-machine .balance-return {
+    margin-top: 20px; /* 마진 병합 일어남. */
 }
 
-.money-put {
-
+.balance-return .info-balance {
+    overflow: hidden;
+    font-size: 14px;
+    line-height: 20px;
+    background: #eae8fe;
 }
 
-.inp-put {
-
+.info-balance .txt-balance {
+    float: right;
 }
 
-.btn-put {
-
+.balance-return .txt-balance::after {
+    display: inline;
+    content: '원';
+    margin-left: 3px;
 }
 
-.item-get {
-
+.money-put .inp-put {
+    border: 1px solid #bdbdbd;
+    line-height: 19px;
 }
 
-.list-item-staged {
-
+.item-get .btn-staged {
+    width: 100%;
 }
 
-.btn-get {
+.item-get .list-item-staged {
+    height: 106px;
+    overflow-y: scroll;
+    border: 1px solid #bdbdbd;
+    background: #eae8fe;
+}
 
+.list-item-staged li {
+    overflow: hidden;
+    padding: 8px;
+    border-radius: 5px;
+    background: #fff;
+    box-sizing: border-box;
+}
+
+.list-item-staged li+li{
+    margin-top: 6px;
+}
+
+.list-item-staged .img-item, .list-item-staged .txt-item {
+    float: left;
+}
+
+.list-item-staged .img-item {
+    width: 18px;
+    height: 33px;
+}
+
+.list-item-staged .txt-item {
+    margin-left: 10px;
+    line-height: 33px;
+    font-size: 9px;
+}
+
+.list-item-staged .num-counter {
+    display: flex;
+    float: right;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #bdbdbd;
+    box-sizing: border-box;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-get .btn-get {
+    font-weight: 700;
+    background: #6327fe;
+    color: #fff;
+}
+
+#app .info-mine{
+    background-color: #EAE8FE;
+}
+
+.info-mine .money-mine{
+    padding: 9px 27px;
+    background-color: #fff;
+}
+
+.money-mine .info-money{
+    padding: 6px 10px;
+    font-size: 14px;
+    line-height: 20px;
+    background-color: #EAE8FE;
+    border-radius: 5px;
+}
+
+.info-money .txt-money{
+    float: right;
+    font-weight: 700;
+}
+
+.info-money .txt-money::after {
+    display: inline;
+    content: '원';
+    margin-left: 4px;
+}
+
+.info-mine .items-mine{
+    margin-top: 20px;
+    padding: 30px 27px 32px;
+    background: #fff;
+}
+
+.items-mine .tit-item{
+    display: block;
+    text-align: center;
+    margin-bottom: 14px;
+    font-size: 14px;
+    font-weight: 700;
+}
+.items-mine .list-item-staged{
+    overflow-y: scroll;
+    height: 364px;
+    padding: 12px 12px 0;
+    background-color: #EAE8FE;
+    border: 1px solid #BDBDBD;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+.items-mine .txt-total{
+    display: block;
+    text-align: right;
+    font-size: 12px;
+    margin-top: 10px;
 }
